# launchbase

./: .pre-commit-config.yaml  .tmuxp.yaml  CLAUDE.md  README.md
.github/workflows/: api-tests.yaml  platform-build.yaml  pre-commit.yaml
admin/: Makefile  README.md  orval.config.ts  package-lock.json  package.json
admin/src/app/: layout.tsx
admin/src/components/: FullScreenLoader.tsx  Logo.tsx
admin/src/contexts/: user-context.tsx
admin/src/hooks/: use-auth-status.ts  use-auth.ts  use-mobile.ts
api/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  manage.py  pyproject.toml  requests.org  requirements-test.txt  requirements.txt
api/.github/workflows/: pre-commit.yaml  tests.yaml
api/app/: config.py  database.py  exceptions.py  logging.py  main.py  models.py  schemas.py  security.py
api/app/api/admin/: access.py  router.py  schemas.py
api/app/api/admin/routers/: meta.py  users.py
api/app/api/platform/: access.py  schemas.py
api/app/api/platform/routers/: meta.py  users.py
api/app/cli/: __init__.py  commands.py  schemas.py
api/app/services/: users.py
api/migrations/: env.py
api/migrations/versions/: 70955f4a9d1e_initial_schema.py  c75a420ef405_add_is_admin_to_users.py  ed2a237691e2_drop_deleted_at_from_users.py
api/tests/: conftest.py
api/tests/api/platform/: test_meta.py  test_users.py
branding/: index.html
platform/: Makefile  README.md  eslint.config.mjs  orval.config.ts  package-lock.json  package.json  tsconfig.json
site/: .env.example  Makefile  README.md  package-lock.json  package.json
(+84 files in other folders)
